artifacts/archived/08-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: wso2-iam-system
  name: wso2is-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/session-cookie-name: route
    nginx.ingress.kubernetes.io/session-cookie-hash: sha1
spec:
  tls:
    - hosts:
        - identityserver
  rules:
    - host: identityserver
      http:
        paths:
          - backend:
              service:
                name: wso2is-service
                port:
                  number: 9443
            path: /
            pathType: Prefix
